# nexus-dnn

./: .commit_msg_step3.txt  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
apps/web/src-tauri/: Cargo.toml  README.md  tauri.conf.json
crates/nexus-api/: Cargo.toml  README.md
crates/nexus-api/benches/: dispatcher_overhead.rs
crates/nexus-api/src/: dep_bootstrap.rs  envelope.rs  error.rs  frontend.rs  lib.rs  mapping.rs  recipe_form.rs  recipe_run.rs  router.rs  vram_gc.rs  workflow_versioning.rs  ws.rs
crates/nexus-api/tests/: backend_events_ws.rs  backend_runtimes_contract_test.rs  backends_variants_contract.rs  chat_hyperparameters_reach_llamacpp.rs  contract_model_store_backends.rs  contract_model_store_detail.rs  contract_model_store_downloads.rs  contract_model_store_installed.rs  contract_model_store_provisioned.rs  contract_model_store_search.rs  cp2_migration_drill.rs  deployment_run_test.rs  deployments_run_route.rs  desktop_focus_boundary.rs  desktop_focus_contract.rs  disabled_extension_filter.rs  dispatcher_contract.rs  draft_suggestions.rs  error_logging.rs  extension_dependencies_contract.rs  extension_removal_test.rs  extension_ui_assets_contract.rs  extensions_list_http_contract.rs  extensions_list_registry_state.rs  host_backends_lease_contract.rs  host_cpu_cores_contract.rs  host_events_sse_boundary.rs  host_events_sse_contract.rs  host_model_dependents_contract.rs  host_models_contract.rs  host_models_install_contract.rs  host_models_metadata_contract.rs  host_models_provision_contract.rs  host_models_revalidate_contract.rs  install_spawn_test.rs  lease_lifecycle_test.rs  modules_contract.rs  modules_deploy_shortcut.rs  modules_dry_run_contract.rs  modules_materialize_idempotency.rs  (+25 more)
crates/nexus-artifact/: Cargo.toml
crates/nexus-artifact/src/: error.rs  lib.rs  manifest.rs  store.rs
crates/nexus-backend-runtimes/: Cargo.toml  README.md  embedded-python.env.example
crates/nexus-backend-runtimes/benches/: lease_rpc_bench.rs
crates/nexus-backend-runtimes/contracts/: install-manifest.schema.json  version-manifest.schema.json
crates/nexus-backend-runtimes/src/: adapter.rs  channel.rs  checksum.rs  compatibility.rs  cpu_cores.rs  detect.rs  diagnostics.rs  download.rs  error.rs  events.rs  family.rs  installs_store.rs  launch_spec.rs  lease.rs  lib.rs  log_pipeline.rs  log_store.rs  parameter_catalog.rs  reserved_policy.rs  resolver.rs  settings.rs  settings_store.rs  spawn.rs  state.rs  state_log.rs
crates/nexus-backend-runtimes/tests/: channel_llamacpp.rs  crash_recovery_test.rs  family_python_bootstrap_test.rs  generic_pipeline_test.rs  generic_repos_test.rs  host_governed_default_deny.rs  lease_acquire_test.rs  lease_all_handles_test.rs  lease_idle_reaper_test.rs  lease_roundtrip_test.rs  lifecycle_events.rs  llamacpp_scraper_fixtures.rs  matchmaker_test.rs  migration_startup.rs  model_blob_dedup.rs  model_install_dedup.rs  model_layout.rs  model_lease_budget.rs  model_license_invariant.rs  model_param_count.rs  model_private_visibility.rs  model_provenance.rs  model_reclaim.rs  model_resolve_dry_run.rs  model_resolver_latency.rs  model_store_schema.rs  model_uninstall_blocked_by_lease.rs  multi_extension_test.rs  ndjson_framer_test.rs  quantization_matching.rs  release_scanner_contract.rs  retry_cache_test.rs  test_echo_install_test.rs  test_echo_native_install_test.rs  test_echo_provision_test.rs
crates/nexus-builtins/: Cargo.toml
crates/nexus-builtins/src/: lib.rs
crates/nexus-civitai/: Cargo.toml
crates/nexus-civitai/src/: error.rs  lib.rs  resolve.rs  url.rs
crates/nexus-core/: Cargo.toml  build.rs
crates/nexus-core/benches/: tracing_bridge_bench.rs
crates/nexus-core/src/: app.rs  config.rs  diagnostic.rs  lib.rs  log_format.rs  main.rs  tracing_bridge.rs
crates/nexus-core/tests/: builtin_extension_discovery.rs  extension_lifecycle.rs  run_execution.rs  tracing_bridge_test.rs  workflow_validation.rs
crates/nexus-deployments/: Cargo.toml  README.md
crates/nexus-deployments/src/: compatibility.rs  diagnostic.rs  error.rs  events.rs  hash.rs  id.rs  lib.rs  parameter.rs  path_guard.rs  repository.rs  sqlite_repo.rs  state.rs
crates/nexus-deployments/tests/: deployment_presets_repo.rs  deployment_presets_service.rs  execute_links_run.rs  export_secret_scan.rs  extension_settings.rs  hash_determinism.rs  import_into_replace.rs  import_no_autoprovision.rs  multi_instance.rs  path_validation.rs  preset_boundary.rs  restore_modes.rs  revision_base_pin.rs  revision_retention.rs  save_no_source_mutation.rs  save_roundtrip.rs  soft_delete_and_purge.rs
crates/nexus-desktop-shell/: Cargo.toml  README.md
crates/nexus-desktop-shell/src/: errors.rs  lib.rs  tray.rs  window.rs
crates/nexus-events/: Cargo.toml
crates/nexus-events/benches/: redaction_bench.rs
crates/nexus-events/src/: bus.rs  emitter.rs  error.rs  lib.rs  redaction.rs  types.rs
crates/nexus-events/tests/: bus_test.rs  redaction_test.rs
crates/nexus-extension/: Cargo.toml  README.md  build.rs
crates/nexus-extension-deps/: Cargo.toml
crates/nexus-extension-deps/src/: context.rs  error.rs  fetch.rs  file_selection.rs  handler.rs  lib.rs  plan.rs  runner.rs  types.rs
crates/nexus-extension-deps/tests/: boundary_test.rs  custom_handler_test.rs  fetch_perf_test.rs  fetch_test.rs  install_flow_test.rs  invalid_spec_test.rs  probe_perf_test.rs  provision_flow_test.rs  unknown_step_type_test.rs
crates/nexus-extension/src/: error.rs  icon_resolver.rs  lib.rs  manifest.rs  operator_index.rs  recipe.rs  registry.rs  router_hook.rs  validation.rs  (+2 more)
crates/nexus-huggingface/: Cargo.toml
crates/nexus-installer/: Cargo.toml
crates/nexus-local-llm-worker/: Cargo.toml  README.md
crates/nexus-models-store/: Cargo.toml  README.md
crates/nexus-recipe/: Cargo.toml
crates/nexus-run/: Cargo.toml
crates/nexus-scheduler/: Cargo.toml
crates/nexus-storage/: Cargo.toml  README.md
crates/nexus-tui/: Cargo.toml  README.md
crates/nexus-worker/: Cargo.toml
crates/nexus-workflow/: Cargo.toml
(+3558 files in other folders)
