[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/nexus-core"]

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
