[package]
name = "nexus-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nexus-protocol = { path = "../nexus-protocol" }
nexus-events = { path = "../nexus-events" }
nexus-extension = { path = "../nexus-extension" }
nexus-workflow = { path = "../nexus-workflow" }
nexus-worker = { path = "../nexus-worker" }
nexus-run = { path = "../nexus-run" }
nexus-scheduler = { path = "../nexus-scheduler" }
nexus-artifact = { path = "../nexus-artifact" }
nexus-storage = { path = "../nexus-storage" }
nexus-backend-runtimes = { path = "../nexus-backend-runtimes" }
nexus-huggingface = { path = "../nexus-huggingface" }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-stream = "0.1"
tokio-util = { workspace = true }
futures-util = "0.3"
rust-embed = { workspace = true }
mime_guess = { workspace = true }
ts-rs = { version = "11", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio-tungstenite = "0.24"
