[package]
name = "nexus-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "compression-gzip", "compression-br", "catch-panic"] }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nexus-protocol = { path = "../nexus-protocol" }
nexus-events = { path = "../nexus-events" }
nexus-extension = { path = "../nexus-extension" }
nexus-extension-deps = { path = "../nexus-extension-deps" }
dashmap = "6"
nexus-workflow = { path = "../nexus-workflow" }
nexus-worker = { path = "../nexus-worker" }
nexus-run = { path = "../nexus-run" }
nexus-scheduler = { path = "../nexus-scheduler" }
nexus-artifact = { path = "../nexus-artifact" }
nexus-storage = { path = "../nexus-storage" }
nexus-backend-runtimes = { path = "../nexus-backend-runtimes" }
nexus-run-events = { path = "../nexus-run-events" }
nexus-models-store = { path = "../nexus-models-store" }
nexus-deployments = { path = "../nexus-deployments" }
nexus-huggingface = { path = "../nexus-huggingface" }
uuid = { workspace = true }
chrono = { workspace = true }
regex-lite = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { workspace = true }
futures-util = "0.3"
async-trait = "0.1"
rust-embed = { workspace = true }
mime_guess = { workspace = true }
ts-rs = { version = "11", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }
sha2 = "0.10"
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
ulid = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
toml = "0.8"

[[bin]]
name = "api-doc-check"
path = "src/bin/api_doc_check.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
camino = "1"
tokio-tungstenite = "0.24"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
async-trait = "0.1"
nexus-local-llm-chat-history = { path = "../../extensions/builtin/local-llm/rust" }
flate2 = "1"
tar = "0.4"

[[bench]]
name = "dispatcher_overhead"
path = "benches/dispatcher_overhead.rs"
harness = false
