[package]
name = "nexus-backend-runtimes"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Host-owned backend runtime pool: install, validate, spawn, and channel-broker inference engines for Nexus-DNN extensions"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0.10"
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
jsonschema = { version = "0.45", default-features = false }
camino = "1"
ulid = "1"
uuid = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "json", "chrono"] }
futures-util = "0.3"
async-trait = "0.1"
rust-embed = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
rstest = "0.23"
wiremock = "0.6"
tempfile = "3"
