[package]
name = "nexus-builtins"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
tracing = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
nexus-api = { path = "../nexus-api" }
nexus-extension = { path = "../nexus-extension" }
nexus-extension-deps = { path = "../nexus-extension-deps" }
nexus-backend-runtimes = { path = "../nexus-backend-runtimes" }
nexus-models-store = { path = "../nexus-models-store" }
nexus-artifact = { path = "../nexus-artifact" }
nexus-events = { path = "../nexus-events" }
nexus-local-llm-chat-history = { path = "../../extensions/builtin/local-llm/rust" }
emotion-tts-extension = { path = "../../extensions/builtin/emotion-tts/rust" }
nexus-video-ltx23-extension = { path = "../../extensions/builtin/nexus-video-ltx23/rust" }
svi2-pro-extension = { path = "../../extensions/builtin/svi2-pro/rust" }
