[package]
name = "nexus-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexus-dnn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tracing-log = "0.2"
console-subscriber = { version = "0.4", optional = true }
tokio = { workspace = true }
nexus-protocol = { path = "../nexus-protocol" }
nexus-events = { path = "../nexus-events" }
nexus-storage = { path = "../nexus-storage" }
nexus-artifact = { path = "../nexus-artifact" }
nexus-extension = { path = "../nexus-extension" }
nexus-workflow = { path = "../nexus-workflow" }
nexus-worker = { path = "../nexus-worker" }
nexus-scheduler = { path = "../nexus-scheduler" }
nexus-run = { path = "../nexus-run" }
nexus-api = { path = "../nexus-api" }
nexus-backend-runtimes = { path = "../nexus-backend-runtimes" }
nexus-extension-deps = { path = "../nexus-extension-deps" }
async-trait = "0.1"
nexus-huggingface = { path = "../nexus-huggingface" }
nexus-models-store = { path = "../nexus-models-store" }
nexus-local-llm-chat-history = { path = "../../extensions/builtin/local-llm/rust" }
emotion-tts-extension = { path = "../../extensions/builtin/emotion-tts/rust" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
camino = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
axum = "0.8"
dirs = "6"

[features]
# Enables `--debug-async` to install `console-subscriber`, exposing every
# tokio task to `tokio-console`. Also requires building with
# `RUSTFLAGS="--cfg tokio_unstable"`. Off by default to keep the standard
# build clean of unstable tokio internals.
console = ["dep:console-subscriber"]

[dev-dependencies]
tokio = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0.10"
tempfile = "3"
nexus-extension = { path = "../nexus-extension" }
nexus-protocol = { path = "../nexus-protocol" }
nexus-workflow = { path = "../nexus-workflow" }
nexus-scheduler = { path = "../nexus-scheduler" }
