[package]
name = "nexus-events"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "redaction_bench"
harness = false
