[package]
name = "nexus-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
serde-saphyr = "0.0.10"
jsonschema = { version = "0.28", default-features = false }
referencing = "0.28"
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nexus-protocol = { path = "../nexus-protocol" }
nexus-extension-deps = { path = "../nexus-extension-deps" }
serde_yaml = "0.9"
sqlparser = { version = "0.55", features = ["visitor"] }
sha2 = "0.10"
regex-lite = "0.1"
parking_lot = "0.12"
fnv = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
uuid = { workspace = true }
toml = "0.8"
axum = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
