[package]
name = "nexus-huggingface"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Shared Hugging Face Hub capability for Nexus-DNN extensions"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "json", "chrono"] }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
