[package]
name = "nexus-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["process", "sync", "fs", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
zip = "2.0"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
