[package]
name = "nexus-recipe"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nexus-workflow = { path = "../nexus-workflow" }
nexus-extension = { path = "../nexus-extension" }
nexus-storage = { path = "../nexus-storage" }

[dev-dependencies]
