[package]
name = "nexus-recipe"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
nexus-workflow = { path = "../nexus-workflow" }
nexus-extension = { path = "../nexus-extension" }
ts-rs = { version = "11", features = ["serde-compat", "serde-json-impl"] }
sha2 = "0.10"
json-canon = "0.1"
