[package]
name = "nexus-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["process", "sync", "time", "io-util"] }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nexus-protocol = { path = "../nexus-protocol" }
nexus-events = { path = "../nexus-events" }
