[package]
name = "nexus-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde-saphyr = "0.0.10"
jsonschema = { version = "0.28", default-features = false, features = ["resolve-file"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
nexus-protocol = { path = "../nexus-protocol" }
nexus-extension = { path = "../nexus-extension" }
