[package]
name = "nexus-dnn-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop wrapper for nexus-dnn (spec 042)"
publish = false

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
