[workspace]

[package]
name = "emotion-tts-extension"
version = "0.1.0"
edition = "2021"
description = "Rust shim for the EmotionTTS extension (spec 031). Router provider + storage contributions + operator registry. Loads the Python IndexTTS-2 worker through a host-issued BackendRuntimeLease."
license = "GPL-3.0-or-later"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "macros", "tokio", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
thiserror = "1"
anyhow = "1"
ulid = { version = "1", features = ["serde"] }
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
