[project]
name = "emotion-tts-worker"
version = "0.1.0"
description = "IndexTTS-2 synthesis worker for the EmotionTTS Nexus extension (spec 031). Speaks JSON-RPC/NDJSON over stdio to the host-side Rust shim."
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

dependencies = [
  # IndexTTS is NOT published on PyPI — uv resolves it via the git source
  # declared under [tool.uv.sources].indextts (note: no hyphen — the upstream
  # package name in setup.py is "indextts").
  "indextts",
  # >=2.4 satisfies upstream's indextts torch>=2.1.2 constraint while letting
  # us pull modern wheels via the [tool.uv.index] pytorch-cu128 mapping below.
  "torch>=2.4",
  "torchaudio>=2.4",
  # Upstream indextts pins transformers==4.36.2 exactly. The prior >=4.45
  # declaration here was unsatisfiable against that pin; loose range below
  # accepts the pinned version while staying flexible.
  "transformers>=4.36,<4.50",
  # Upstream pins tokenizers==0.15.0 exactly; loose range satisfies it.
  "tokenizers>=0.15,<0.21",
  "numpy>=1.26",
  "pydantic>=2.8",
  "ffmpeg-python>=0.2",
  "soundfile>=0.12",
  "pyloudnorm>=0.1.1",
  "silero-vad>=5.1",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
deepspeed = ["deepspeed>=0.15"]
# `denoise` extra removed — `rnnoise-wheels` is not published on PyPI and
# uv's lockfile-consistency check rejects unresolvable extras even when not
# activated. Re-introduce when a working denoise package is identified
# (either as a PyPI dist or via [tool.uv.sources] git pin).
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "black>=24",
]

[project.scripts]
emotion-tts-worker = "emotion_tts_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emotion_tts_worker"]

[tool.uv]
managed = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
# indextts is not on PyPI — pin to the v1.5.0 release tag from upstream.
# Bump the tag here when refreshing the IndexTTS version. Note: the upstream
# setup.py at v1.5.0 self-reports "version=0.1.4" (their tag/version field
# disagree); the resolved package is whatever the tag points at.
indextts = { git = "https://github.com/index-tts/index-tts", tag = "v1.5.0" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "ASYNC"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
