[project]
name = "emotion-tts-worker"
version = "0.1.0"
description = "IndexTTS-2 synthesis worker for the EmotionTTS Nexus extension (spec 031). Speaks JSON-RPC/NDJSON over stdio to the host-side Rust shim."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

dependencies = [
  # IndexTTS is NOT published on PyPI — uv resolves it via the git source
  # declared under [tool.uv.sources].indextts (note: no hyphen — the upstream
  # package name in setup.py is "indextts").
  "indextts",
  # cu130 (CUDA 13) build, pinned to the 2.11.x line. cu128 was wrong for the
  # GB10/DGX Spark (sm_121): its bundled NVRTC tops out at sm_120, so PyTorch's
  # runtime jiterator (complex `abs` in the vocoder/STFT) failed with
  # "nvrtc: invalid value for --gpu-architecture". cu130 ships NVRTC 13.0.88,
  # which knows sm_121, and aligns torchcodec's libnvrtc dependency below.
  # The `<2.12` cap keeps torch matched to torchaudio: cu130 publishes torch
  # 2.12 but torchaudio only up to 2.11, so an open floor would resolve a
  # mismatched pair. cu130 has manylinux_2_28_aarch64 + win + x86 wheels.
  "torch>=2.11,<2.12",
  "torchaudio>=2.11,<2.12",
  # torchaudio>=2.11 removed its native encoders and routes save()/load()
  # through TorchCodec, which the IndexTTS-2 wav write path uses. The cu130
  # build links libnvrtc.so.13 — consistent with the cu130 torch above; the
  # cu128 torchcodec hard-needs libnvrtc.so.12 and cannot coexist with the
  # NVRTC 13 the GB10 jiterator requires. Needs system ffmpeg (4-8).
  "torchcodec",
  # Upstream IndexTTS-2 (main, version 2.0.0) pins transformers==4.52.1 and
  # tokenizers==0.21.0 exactly. Loose ranges below satisfy those pins while
  # leaving room for security patches in the .x lane.
  "transformers>=4.52,<5.0",
  "tokenizers>=0.21,<0.22",
  # Upstream pins numpy==1.26.2 exactly. NumPy 2.x has incompatible API
  # breaks (`np.float_`, etc.) that librosa<0.11 and numba<0.59 rely on,
  # plus a torch ABI break — keep the worker pinned to 1.x explicitly.
  "numpy>=1.26,<2.0",
  "pydantic>=2.8",
  "ffmpeg-python>=0.2",
  "soundfile>=0.12",
  "pyloudnorm>=0.1.1",
  "silero-vad>=5.1",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  # Pure-Python text normalizer used cross-platform. IndexTTS's upstream
  # `wetextprocessing` transitive (via tn → pynini) does not build on
  # Windows because pynini's sdist passes GCC-only flags to MSVC. We swap
  # to `wetext` (kaldifst-based, has Windows wheels) and monkey-patch
  # IndexTTS's TextNormalizer.load() to use the Darwin path globally.
  "wetext>=0.1.2",
  # Build system used by BigVGAN's custom CUDA kernel JIT path. Without
  # ninja installed, BigVGAN logs `RuntimeError('Ninja is required ...')`
  # and falls back to the slower torch path on first synthesis. Pinning
  # >=1.11 ensures the wheel-distributed binary is on PATH for the JIT
  # toolchain. Pure-Python wheel — no native compile required.
  "ninja>=1.11",
]

[project.optional-dependencies]
deepspeed = ["deepspeed>=0.15"]
# `denoise` extra removed — `rnnoise-wheels` is not published on PyPI and
# uv's lockfile-consistency check rejects unresolvable extras even when not
# activated. Re-introduce when a working denoise package is identified
# (either as a PyPI dist or via [tool.uv.sources] git pin).
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.6",
  "black>=24",
]

[project.scripts]
emotion-tts-worker = "emotion_tts_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emotion_tts_worker"]

[tool.uv]
managed = true
# Drop `wetextprocessing` (pulled in by indextts) from the resolution graph
# entirely. It transitively requires pynini, which has no Windows wheels and
# whose sdist will not build with MSVC. We replace its functionality with
# `wetext` (declared above) and a runtime monkey-patch in the worker. The
# `python_version < '0'` marker is always false, so this override removes
# wetextprocessing wherever it would otherwise be required.
override-dependencies = [
  "wetextprocessing ; python_version < '0'",
  # indextts pins torch/torchaudio to its own cu128 index; override both so the
  # root's cu130 source (sm_121/GB10 + torchcodec) wins instead of conflicting.
  "torch>=2.11,<2.12",
  "torchaudio>=2.11,<2.12",
]

[tool.uv.sources]
# Index name MUST match indextts's own `pytorch-cuda` index so the root's
# definition (cu130, below) overrides the git dep's cu128 — otherwise uv sees
# two indexes for torch and errors with "conflicting indexes".
torch = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
torchcodec = { index = "pytorch-cuda" }
# indextts is not on PyPI. Upstream's only published tag is `v1.5.0`, which
# is the IndexTTS v1 line and does NOT contain `indextts/infer_v2.py` —
# the IndexTTS-2 entrypoint we need (`from indextts.infer_v2 import IndexTTS2`)
# only exists on `main`. Pin to a SHA on `main` for reproducibility:
#   * `version` field on main self-reports 2.0.0
#   * SHA below was verified to contain `indextts/infer_v2.py`
# When upstream cuts a v2 release tag, switch this to `tag = "v2.x.y"`.
indextts = { git = "https://github.com/index-tts/index-tts", rev = "830f6f8f94a51fea23ab1d639027a86200075a4e" }

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "ASYNC"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
